systemd System and Service Manager

NEW CHANGES:
        (+) remove ACL support;
        * docs:
             (+) remove gtk-doc build;
        * config:
             (+) remove /etc/hostname;
             (+) remove /etc/locale.conf;
             (+) remove /etc/vconsole.conf;
        * data:
             (+) move hwdb to separate module udev;
        * program:
             (+) remove systemd-sysctl program;
             (+) remove systemd-resolved program;
             (+) remove systemd-timesyncd program;
             (+) remove timedatectl and systemd-timedated programs;
             (+) remove hostnamectl and systemd-hostnamed programs;
             (+) remove systemd-networkd and systemd-networkd-wait-online programs;
             (+) remove systemd-nspawn program;
             (+) remove systemd-machined and machinectl programs;
             (+) remove systemd-localed and localectl programs;
             (+) remove systemd-vconsole-setup program;
             (+) move udevadm to separate module udev;
             (+) move systemd-udevd to separate module udev;
        * tests:
             (+) move test-udev to separate module udev;
        * units:
             (+) add sysctl service;
             (+) remove systemd-sysctl service;
             (+) remove systemd-networkd-wait-online service;
             (+) remove systemd-networkd service;
             (+) remove systemd-resolved service;
             (+) remove systemd-timesyncd service;
             (+) remove systemd-timedated service;
             (+) remove systemd-hostnamed service;
             (+) remove systemd-machined service;
             (+) remove systemd-nspawn@ service;
             (+) remove systemd-localed service;
             (+) remove systemd-vconsole-setup service;
             (+) move systemd-udev-settle service to separate module udev;
             (+) move systemd-udev-trigger service to separate module udev;
             (+) move systemd-udevd service to separate module udev;